--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Awal Bertemu</h3>
+                <h3 class="font-semibold text-lg">Awal Bertemu (2024)</h3>
                 <p class="text-sm text-gray-600">
                   Cerita singkat tentang bagaimana Anda pertama kali bertemu.
                 </p>
@@ -351,7 +351,7 @@
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Lamaran</h3>
+                <h3 class="font-semibold text-lg">Lamaran (April 2024)</h3>
                 <p class="text-sm text-gray-600">
                   Momen saat hubungan menjadi lebih serius dan lamaran terjadi.
                 </p>
@@ -371,7 +371,9 @@
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Menuju Halal</h3>
+                <h3 class="font-semibold text-lg">
+                  Menuju Halal (Desember 2025)
+                </h3>
                 <p class="text-sm text-gray-600">
                   Persiapan dan perjalanan menuju hari pernikahan yang
                   dinantikan.
