--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         font-family: "Poppins", sans-serif;
         background-color: #f5f5f3;
         color: #333;
-        /* Add padding to the bottom to prevent navbar from overlapping content */
         padding-bottom: 80px;
-        overflow-x: hidden; /* Prevent horizontal scroll caused by animations */
+        overflow-x: hidden;
       }
       h1,
       h2,
@@ -65,7 +64,6 @@
       .bg-pattern {
         background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23d4af37' fill-opacity='0.1'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
       }
-      /* Loading spinner animation */
       .loader {
         border: 2px solid #f3f3f3;
         border-top: 2px solid #d4af37;
@@ -82,7 +80,6 @@
           transform: rotate(360deg);
         }
       }
-      /* Active state for navbar link */
       .nav-link.active {
         color: #d4af37;
       }
@@ -92,7 +89,7 @@
     <audio
       id="background-music"
       loop
-      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
+      src="https://www.music.pitt.edu/sites/default/files/gamelan/audio/Ladrang%20Pangkur.mp3"
     ></audio>
 
     <!-- ====================================================== -->
@@ -198,7 +195,7 @@
             <!-- Groom -->
             <div class="text-center" data-aos="fade-right">
               <img
-                src="https://placehold.co/300x300/a3b18a/ffffff?text=Yazid"
+                src="images/mas.jpg"
                 alt="M. Yazid Al Busthomi"
                 class="w-48 h-48 rounded-full mx-auto object-cover shadow-lg border-4 border-white"
               />
@@ -206,7 +203,7 @@
                 M. Yazid Al Busthomi
               </h3>
               <p class="mt-2 text-gray-600">
-                Putra dari Bapak [...] & Ibu [...]
+                Putra dari Bapak Samsudin & Ibu Inayatie
               </p>
             </div>
             <div
@@ -218,7 +215,7 @@
             <!-- Bride -->
             <div class="text-center" data-aos="fade-left">
               <img
-                src="https://placehold.co/300x300/d4af37/ffffff?text=Tifa"
+                src="images/adek.jpg"
                 alt="Sarirotul Latifah"
                 class="w-48 h-48 rounded-full mx-auto object-cover shadow-lg border-4 border-white"
               />
@@ -226,7 +223,7 @@
                 Sarirotul Latifah
               </h3>
               <p class="mt-2 text-gray-600">
-                Putri dari Bapak [...] & Ibu [...]
+                Putri dari Bapak Sudarsono (Alm.) & Ibu Rodiyah
               </p>
             </div>
           </div>
@@ -256,10 +253,6 @@
                 class="mx-auto text-[#d4af37] w-12 h-12 mb-4"
               ></i>
               <p class="font-semibold text-lg">Jum'at, 12 Desember 2025</p>
-              <p class="text-gray-600">Pukul 09:00 WIB - Selesai</p>
-              <p class="mt-4 text-sm text-gray-500">
-                Lokasi: [Alamat Lengkap Akad Nikah]
-              </p>
             </div>
             <!-- Resepsi Wanita -->
             <div
@@ -272,10 +265,10 @@
                 data-lucide="heart"
                 class="mx-auto text-[#d4af37] w-12 h-12 mb-4"
               ></i>
-              <p class="font-semibold text-lg">Sabtu, 13 Desember 2025</p>
+              <p class="font-semibold text-lg">Sabtu, 20 Desember 2025</p>
               <p class="text-gray-600">Pukul 11:00 WIB - Selesai</p>
               <p class="mt-4 text-sm text-gray-500">
-                Lokasi: Desa Jeruk, Kecamatan Kraton, Kabupaten Pasuruan
+                Dusun Krajan, RT/RW 001/003, Desa Jeruk, Kraton, Kab. Pasuruan
               </p>
               <a
                 href="https://maps.app.goo.gl/CrSBr1Pj2A9dj5Uu6"
@@ -295,13 +288,13 @@
                 data-lucide="party-popper"
                 class="mx-auto text-[#d4af37] w-12 h-12 mb-4"
               ></i>
-              <p class="font-semibold text-lg">Sabtu, 20 Desember 2025</p>
-              <p class="text-gray-600">Pukul 11:00 WIB - Selesai</p>
+              <p class="font-semibold text-lg">Minggu, 21 Desember 2025</p>
+              <p class="text-gray-600">Pukul 09.00 WIB - Selesai</p>
               <p class="mt-4 text-sm text-gray-500">
-                Lokasi: Desa Plinggisan, Kecamatan Kraton, Kabupaten Pasuruan
+                Plinggisan RT/RW 002/002, Desa Plinggisan, Kraton, Kab. Pasuruan
               </p>
               <a
-                href="https://maps.app.goo.gl/twtnhLoLu6rGFWhr8"
+                href="https://maps.app.goo.gl/PncJwrpnrMVXvXm97"
                 target="_blank"
                 class="inline-block mt-4 bg-gray-800 text-white px-6 py-2 rounded-full text-sm hover:bg-gray-700 transition"
                 >Lihat Peta</a
@@ -335,17 +328,19 @@
             >
               <div class="order-1 w-5/12"></div>
               <div
-                class="z-20 flex items-center order-1 bg-[#d4af37] shadow-xl w-8 h-8 rounded-full"
+                class="z-20 flex items-center order-1 bg-white shadow-xl w-10 h-10 rounded-full border-2 border-[#d4af37]"
               >
                 <i
                   data-lucide="sparkles"
-                  class="w-5 h-5 text-white mx-auto"
+                  class="w-5 h-5 text-[#d4af37] mx-auto"
                 ></i>
               </div>
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Awal Bertemu</h3>
+                <h3 class="font-semibold text-lg text-gray-800">
+                  Awal Bertemu
+                </h3>
                 <p class="text-sm text-gray-600">
                   Cerita singkat tentang bagaimana Anda pertama kali bertemu.
                 </p>
@@ -358,17 +353,17 @@
             >
               <div class="order-1 w-5/12"></div>
               <div
-                class="z-20 flex items-center order-1 bg-[#d4af37] shadow-xl w-8 h-8 rounded-full"
+                class="z-20 flex items-center order-1 bg-white shadow-xl w-10 h-10 rounded-full border-2 border-[#d4af37]"
               >
                 <i
                   data-lucide="book-open-check"
-                  class="w-5 h-5 text-white mx-auto"
+                  class="w-5 h-5 text-[#d4af37] mx-auto"
                 ></i>
               </div>
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Lamaran</h3>
+                <h3 class="font-semibold text-lg text-gray-800">Lamaran</h3>
                 <p class="text-sm text-gray-600">
                   Momen saat hubungan menjadi lebih serius dan lamaran terjadi.
                 </p>
@@ -381,17 +376,19 @@
             >
               <div class="order-1 w-5/12"></div>
               <div
-                class="z-20 flex items-center order-1 bg-[#d4af37] shadow-xl w-8 h-8 rounded-full"
+                class="z-20 flex items-center order-1 bg-white shadow-xl w-10 h-10 rounded-full border-2 border-[#d4af37]"
               >
                 <i
                   data-lucide="heart-handshake"
-                  class="w-5 h-5 text-white mx-auto"
+                  class="w-5 h-5 text-[#d4af37] mx-auto"
                 ></i>
               </div>
               <div
                 class="order-1 bg-gray-100 rounded-lg shadow-xl w-5/12 px-6 py-4"
               >
-                <h3 class="font-semibold text-lg">Menuju Halal</h3>
+                <h3 class="font-semibold text-lg text-gray-800">
+                  Menuju Halal
+                </h3>
                 <p class="text-sm text-gray-600">
                   Persiapan dan perjalanan menuju hari pernikahan yang
                   dinantikan.
@@ -430,63 +427,11 @@
                 required
               />
             </div>
-            <div class="mb-4">
-              <label class="block text-gray-700 font-semibold mb-2"
-                >Konfirmasi Kehadiran</label
-              >
-              <div class="flex items-center space-x-4">
-                <label class="flex items-center">
-                  <input
-                    type="radio"
-                    name="Kehadiran"
-                    value="Hadir"
-                    class="mr-2 accent-[#d4af37]"
-                    checked
-                  />
-                  Hadir
-                </label>
-                <label class="flex items-center">
-                  <input
-                    type="radio"
-                    name="Kehadiran"
-                    value="Tidak Hadir"
-                    class="mr-2 accent-[#d4af37]"
-                  />
-                  Tidak Hadir
-                </label>
-              </div>
-            </div>
-            <div id="jumlah-wrapper" class="mb-4">
-              <label for="jumlah" class="block text-gray-700 font-semibold mb-2"
-                >Jumlah Tamu (termasuk Anda)</label
-              >
-              <input
-                type="number"
-                id="jumlah"
-                name="Jumlah"
-                min="0"
-                value="1"
-                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#d4af37]"
-                required
-              />
-            </div>
+
             <div class="mb-6">
-              <!-- Gemini AI Feature -->
-              <div class="flex justify-between items-center mb-2">
-                <label for="ucapan" class="block text-gray-700 font-semibold"
-                  >Ucapan & Doa</label
-                >
-                <button
-                  type="button"
-                  id="generate-wish-btn"
-                  class="text-sm bg-[#d4af37] text-gray-800 px-3 py-1 rounded-full hover:bg-[#c8a02a] transition-all flex items-center gap-2 disabled:bg-gray-400"
-                >
-                  <span id="generate-wish-icon-container">
-                    <span id="generate-wish-icon">✨</span>
-                  </span>
-                  <span id="generate-wish-text">Buatkan Ucapan</span>
-                </button>
-              </div>
+              <label for="ucapan" class="block text-gray-700 font-semibold mb-2"
+                >Ucapan & Doa</label
+              >
               <textarea
                 id="ucapan"
                 name="Ucapan"
@@ -570,8 +515,8 @@
       document.addEventListener("DOMContentLoaded", function () {
         // Initialize AOS
         AOS.init({
-          duration: 800, // values from 0 to 3000, with step 50ms
-          once: false, // whether animation should happen only once - while scrolling down
+          duration: 800,
+          once: false,
         });
 
         // Initialize Lucide Icons
@@ -616,7 +561,6 @@
             mainContent.style.display = "block";
             document.body.style.overflow = "auto";
 
-            // Refresh AOS to detect new elements
             setTimeout(() => {
               AOS.refresh();
             }, 500);
@@ -629,9 +573,7 @@
                 lucide.createIcons();
               })
               .catch((error) => {
-                console.log(
-                  "Autoplay was prevented. User must interact first."
-                );
+                console.error("Audio play error:", error);
                 playPauseBtn.innerHTML = playIcon;
                 lucide.createIcons();
               });
@@ -661,11 +603,11 @@
           },
           {
             name: "Resepsi Wanita",
-            date: new Date("Dec 13, 2025 11:00:00").getTime(),
+            date: new Date("Dec 20, 2025 11:00:00").getTime(),
           },
           {
             name: "Resepsi Pria",
-            date: new Date("Dec 20, 2025 11:00:00").getTime(),
+            date: new Date("Dec 21, 2025 11:00:00").getTime(),
           },
         ];
 
@@ -749,104 +691,10 @@
           });
         });
 
-        // --- Gemini API Wish Generator ---
-        const generateWishBtn = document.getElementById("generate-wish-btn");
-        const ucapanTextarea = document.getElementById("ucapan");
-        const generateWishIconContainer = document.getElementById(
-          "generate-wish-icon-container"
-        );
-        const generateWishText = document.getElementById("generate-wish-text");
-        const defaultIcon = `<span id="generate-wish-icon">✨</span>`;
-        const loadingIcon = `<div class="loader"></div>`;
-
-        // !!! PENTING: Ganti dengan Kunci API Gemini Anda untuk mengaktifkan fitur ini.
-        const apiKey = "AIzaSyCPWpdi2YDEbxcRTR2-XcmfpAw4vA7evE8";
-
-        generateWishBtn.addEventListener("click", async () => {
-          if (apiKey === "AIzaSyCPWpdi2YDEbxcRTR2-XcmfpAw4vA7evE8" || !apiKey) {
-            ucapanTextarea.value =
-              "Fitur AI belum diaktifkan oleh pemilik undangan. Harap masukkan ucapan secara manual.";
-            return;
-          }
-
-          const guestName = rsvpNameInput.value.trim();
-          if (!guestName) {
-            alert("Mohon isi nama Anda terlebih dahulu.");
-            return;
-          }
-
-          generateWishBtn.disabled = true;
-          generateWishIconContainer.innerHTML = loadingIcon;
-          generateWishText.textContent = "Membuat...";
-          ucapanTextarea.value =
-            "AI sedang merangkai kata-kata terbaik untuk Anda...";
-
-          const prompt = `Tuliskan sebuah ucapan pernikahan yang indah dan tulus untuk pasangan bernama Yazid dan Tifa dalam Bahasa Indonesia. Ucapan ini dari tamu mereka yang bernama ${guestName}. Buatlah ucapan yang hangat, menyentuh, dan penuh doa baik untuk masa depan mereka. Buat dalam 1 paragraf singkat.`;
-
-          const chatHistory = [{ role: "user", parts: [{ text: prompt }] }];
-          const payload = { contents: chatHistory };
-          const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
-
-          try {
-            const response = await fetch(apiUrl, {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
-              body: JSON.stringify(payload),
-            });
-
-            if (!response.ok) {
-              throw new Error(
-                `API Error: ${response.status} ${response.statusText}`
-              );
-            }
-
-            const result = await response.json();
-
-            if (
-              result.candidates &&
-              result.candidates.length > 0 &&
-              result.candidates[0].content &&
-              result.candidates[0].content.parts &&
-              result.candidates[0].content.parts.length > 0
-            ) {
-              const text = result.candidates[0].content.parts[0].text;
-              ucapanTextarea.value = text;
-            } else {
-              ucapanTextarea.value =
-                "Maaf, kami tidak bisa membuat ucapan saat ini. Silakan coba lagi atau tulis manual.";
-            }
-          } catch (error) {
-            console.error("Gemini API call failed:", error);
-            ucapanTextarea.value = `Terjadi kesalahan saat memanggil AI. Silakan tulis ucapan secara manual.`;
-          } finally {
-            generateWishBtn.disabled = false;
-            generateWishIconContainer.innerHTML = defaultIcon;
-            generateWishText.textContent = "Buatkan Ucapan";
-          }
-        });
-
         // --- RSVP Form Submission and Logic ---
         const rsvpForm = document.getElementById("rsvp-form");
         const rsvpStatus = document.getElementById("rsvp-status");
         const submitBtn = document.getElementById("submit-rsvp");
-        const kehadiranRadios = document.querySelectorAll(
-          'input[name="Kehadiran"]'
-        );
-        const jumlahWrapper = document.getElementById("jumlah-wrapper");
-        const jumlahInput = document.getElementById("jumlah");
-
-        // Logic to hide/show guest count based on attendance
-        kehadiranRadios.forEach((radio) => {
-          radio.addEventListener("change", function () {
-            if (this.value === "Tidak Hadir") {
-              jumlahWrapper.style.display = "none";
-              jumlahInput.value = 0;
-            } else {
-              jumlahWrapper.style.display = "block";
-              jumlahInput.value = 1;
-            }
-          });
-        });
 
         const scriptURL =
           "https://script.google.com/macros/s/AKfycbypNkb9a3Clkv_MU8aQz9cSAQFNlu3iPjqRw2oYQ7wZDyK2ZVAHxbfcz68poj15rPE/exec";
@@ -861,7 +709,7 @@
             .then((response) => {
               console.log("Success!", response);
               rsvpStatus.textContent =
-                "Terima kasih! Konfirmasi Anda telah terkirim.";
+                "Terima kasih! Ucapan Anda telah terkirim.";
               rsvpStatus.style.color = "green";
               submitBtn.disabled = false;
               submitBtn.textContent = "Kirim";
@@ -869,9 +717,6 @@
               if (guest) {
                 rsvpNameInput.value = guest.replace(/_/g, " ");
               }
-              // Reset the guest count display
-              jumlahWrapper.style.display = "block";
-              jumlahInput.value = 1;
             })
             .catch((error) => {
               console.error("Error!", error.message);
