update perjalanan kami

--- a/index.html
+++ b/index.html
@@ -342,7 +342,9 @@
                   Awal Bertemu
                 </h3>
                 <p class="text-sm text-gray-600">
-                  Cerita singkat tentang bagaimana Anda pertama kali bertemu.
+                  Tahun 2024, kami dipertemukan di satu tempat kerja. Tanpa
+                  disadari, dari interaksi sederhana, dukungan dan doa
+                  rekan-rekan membuat langkah kami semakin dekat.
                 </p>
               </div>
             </div>
@@ -365,7 +367,9 @@
               >
                 <h3 class="font-semibold text-lg text-gray-800">Lamaran</h3>
                 <p class="text-sm text-gray-600">
-                  Momen saat hubungan menjadi lebih serius dan lamaran terjadi.
+                  Pada April 2025, kami mengikat janji. Sebuah momen singkat
+                  namun penuh makna, bahwa niat kami bukan sekedar rasa, tapi
+                  keseriusan berubah menjadi tekad untuk melangkah bersama.
                 </p>
               </div>
             </div>
@@ -390,8 +394,12 @@
                   Menuju Halal
                 </h3>
                 <p class="text-sm text-gray-600">
-                  Persiapan dan perjalanan menuju hari pernikahan yang
-                  dinantikan.
+                  Setelah melalui segala persiapan dan doa terbaik, kini kami
+                  melangkah menuju hari yang telah dinantikan. Dengan harapan
+                  dan doa terbaik, kami bersiap menapaki jalan menuju halal.
+                  Desember ini menjadi saksi ketika dua hati disatukan dalam
+                  akad yang penuh berkah. Semoga perjalanan ini menjadi awal
+                  dari rumah tangga yang sakinah, mawaddah, warahmah.
                 </p>
               </div>
             </div>
