--- a/index.html
+++ b/index.html
@@ -395,11 +395,10 @@
                 </h3>
                 <p class="text-sm text-gray-600">
                   Setelah melalui segala persiapan dan doa terbaik, kini kami
-                  melangkah menuju hari yang telah dinantikan. Dengan harapan
-                  dan doa terbaik, kami bersiap menapaki jalan menuju halal.
-                  Desember ini menjadi saksi ketika dua hati disatukan dalam
-                  akad yang penuh berkah. Semoga perjalanan ini menjadi awal
-                  dari rumah tangga yang sakinah, mawaddah, warahmah.
+                  melangkah menuju hari yang telah dinantikan. Desember ini
+                  menjadi saksi ketika dua hati disatukan dalam akad yang penuh
+                  berkah. Semoga perjalanan ini menjadi awal dari rumah tangga
+                  yang sakinah, mawaddah, warahmah.
                 </p>
               </div>
             </div>
