--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 class="mx-auto text-[#d4af37] w-12 h-12 mb-4"
               ></i>
               <p class="font-semibold text-lg">Sabtu, 20 Desember 2025</p>
-              <p class="text-gray-600">Pukul 11:00 WIB - Selesai</p>
+              <p class="text-gray-600">Pukul 09:00 s/d 12.00 WIB</p>
               <p class="mt-4 text-sm text-gray-500">
                 Dusun Krajan, RT/RW 001/003, Desa Jeruk, Kraton, Kab. Pasuruan
               </p>
@@ -289,7 +289,7 @@
                 class="mx-auto text-[#d4af37] w-12 h-12 mb-4"
               ></i>
               <p class="font-semibold text-lg">Minggu, 21 Desember 2025</p>
-              <p class="text-gray-600">Pukul 09.00 WIB - Selesai</p>
+              <p class="text-gray-600">Pukul 09.00 WIB s/d Selesai</p>
               <p class="mt-4 text-sm text-gray-500">
                 Plinggisan RT/RW 002/002, Desa Plinggisan, Kraton, Kab. Pasuruan
               </p>
@@ -606,15 +606,15 @@
         const eventDates = [
           {
             name: "Akad Nikah",
-            date: new Date("Dec 12, 2025 09:00:00").getTime(),
+            date: new Date("Dec 12, 2025 07:00:00").getTime(),
           },
           {
             name: "Resepsi Wanita",
-            date: new Date("Dec 20, 2025 11:00:00").getTime(),
+            date: new Date("Dec 20, 2025 09:00:00").getTime(),
           },
           {
             name: "Resepsi Pria",
-            date: new Date("Dec 21, 2025 11:00:00").getTime(),
+            date: new Date("Dec 21, 2025 09:00:00").getTime(),
           },
         ];
 
